# sys-crates-repro

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  error-log.txt
test-crate/: BUILD.bazel
