load("@rules_rust//rust:defs.bzl", "rust_binary")

rust_binary(
    name =  "test-crate",
    srcs = glob([
        "src/**",
    ]),
    crate_root = "src/main.rs",
    rustc_flags = select({
        "//:release": [
            "-Clto=true",
            "-Ccodegen-units=1",
            "-Cpanic=abort",
            "-Copt-level=3",
            "-Cstrip=symbols",
        ],
        "//conditions:default": [
            "-Copt-level=0",
        ],
    }),
    visibility = ["//visibility:public"],
    deps = [
        # External crates
        "//thirdparty/crates:mimalloc",
        "//thirdparty/crates:lz4-sys",
         ],
)
