load("@rules_rust//rust:defs.bzl", "rust_binary")

rust_binary(
    name = "hello_world_host",
    srcs = glob([
        "src/**",
    ]),
    crate_root = "src/main.rs",
    deps = [
        # External crates
        "//thirdparty/crates:mimalloc",
        "//thirdparty/crates:lz4-sys",
    ],
)

rust_binary(
    name = "hello_world_x86_64",
    srcs = glob([
        "src/**",
    ]),
    crate_root = "src/main.rs",
    platform = "//build/platforms:linux-x86_64",
    deps = [
        # External crates
        "//thirdparty/crates:mimalloc",
        "//thirdparty/crates:lz4-sys",
    ],
)

rust_binary(
    name = "hello_world_aarch64",
    srcs = glob([
        "src/**",
    ]),
    crate_root = "src/main.rs",
    platform = "//build/platforms:linux-aarch64",
    deps = [
        # External crates
        "//thirdparty/crates:mimalloc",
        "//thirdparty/crates:lz4-sys",
    ],
)
